--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./src/index.js",
-    "dev":"env-cmd -f ./config/dev.env nodemon -e js,mgs,html,hbs ./src/index.js",
-    "sass": "sass ./scss:./public/css --watch --no-source-map"
+    "dev": "env-cmd -f ./config/dev.env nodemon -e js,mgs,html,hbs ./src/index.js",
+    "sass": "sass ./scss:./public/css --watch --no-source-map",
+    "exceljson": "node ./scripts/convertDailyConfirmed.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "convert-excel-to-json": "^1.7.0",
     "env-cmd": "^10.1.0",
     "sass": "^1.43.2"
   },
